--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ a.a-small {
     margin: 0 auto;
 }
 
+.thin-font {
+    font-weight: 100;
+}
+
+
 /************************ SECTIONS ***********************/
 
 .section-label {
@@ -186,8 +191,8 @@ a.header-button:hover {
 }
 
 .rotating-quotes {
-    min-height: 300px;
-    margin-top: 100px;
+    min-height: 220px;
+    margin-top: 90px;
 }
 
 .culture-icon {
@@ -198,7 +203,16 @@ a.header-button:hover {
     margin-bottom: 20px;
     color: black;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.culture-icon-img {
+    width: 150px;
+}
+
+.quote-writer {
+    text-align: right;
+    padding-right: 10%;
 }
 
 .item {
@@ -221,6 +235,7 @@ a.header-button:hover {
 .solution-box-front,
 .solution-box-info {
     height: 280px;
+    border-radius: 5px;
 }
 
 .solution-box-icon {
@@ -336,23 +351,32 @@ a.header-button:hover {
     padding: 10px 4px;
     display: none;
     background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
+    border-radius: 5px;
 }
 
 .job-item {
     font-size: 1.3em;
 }
 
-/******************************************/
+/******************** CONTACT **********************/
 
 .contact-form {
-    color: black;
+    /*color: black;*/
 }
 
 .contact-info-section {
     margin-bottom: 70px;
 }
 
+.section-inner-contacts {
+    /*margin-top: 50px;*/
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 50px;
+    border-radius: 5px;
+}
+
+
+/******************** FOOTER **********************/
 
 .footer {
     height: 60px;
