Changed logo position

--- a/style.css
+++ b/style.css
@@ -205,8 +205,8 @@ a.header-button:hover, a.header-button-full:hover {
 }
 
 .logo-img {
-    margin: 0 auto 10px auto;
-    width: 60%;
+    margin: 160px auto 10px auto;
+    width: 70%;
 
 }
 
